@@ -2839,7 +2839,7 @@ sub handle_ltlibraries
 	   my $ldir = '';
 	   $ldir = '/' . dirname ($val)
 	     if (!$strip_subdir);
-	   # A library cannot be installed in different directory
+	   # A library cannot be installed in different directories
 	   # in overlapping conditions.
 	   if (exists $instconds{$val})
 	     {
