@@ -9584,7 +9584,7 @@ negated using @samp{!}.  The @code{else} statement may be omitted.
 Conditionals may be nested to any depth.  You may specify an argument to
 @code{else} in which case it must be the negation of the condition used
 for the current @code{if}.  Similarly you may specify the condition
-that is closed by an @code{end}:
+that is closed on the @code{endif} line:
 
 @example
 if DEBUG
