@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Test to make sure that Automake complains when an auxfile (here depcomp)
-# is installed, but the Makefile tht distributes it is not processed.
+# is installed, but the Makefile that distributes it is not processed.
 
 . ./defs || Exit 1
 
