@@ -1,3 +1,11 @@
+2009-10-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Doc and comment typos.
+	* automake.in (handle_ltlibraries): Fix typo in comment.
+	* tests/distcom7.test: Likewise.
+	* tests/lisp5.test: Likewise.
+	* doc/automake.texi (Usage of Conditionals): Fix typo.
+
 2009-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix race condition in werror2.test due to sanity sleep change.
